# AugusLabDP

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-utils.txt  requirements.txt
app/: __init__.py  data_analyzer.py  data_detector.py  data_extractor.py  data_source_widget.py  main_window.py  processing_options_widget.py
app/readutil/: __init__.py  readKS.py  readSGLX.py
utils/: __init__.py  algo_utils.py  brain_region_utils.py  data_utils.py  drag_ks_region_boundary.py  ecg_example.ipynb  ecg_utils.py  eeg_utils.py  plot_utils.py  pupil_utils.py  readout_utils.py  region_info.csv  run_in_all_sessions.py
